fix: Added text overflow restriction for text elements in ProductItem component. Added links for product image andtitle. Changed color for stock.

--- a/src/components/Products/ProductsItem/ProductsItem.module.scss
+++ b/src/components/Products/ProductsItem/ProductsItem.module.scss
@@ -19,16 +19,17 @@
 }
 
 .info {
-  min-width: 250px;
+  width: calc(100vw - 626px);
 
   display: flex;
   flex-direction: column;
   gap: 25px;
-  flex: 1;
 }
 
 .description {
-  font-size: 12px;
+  width: 100%;
+
+  font-size: 14px;
   font-weight: 400;
   color: var(--clr-secondary-400);
 
@@ -36,19 +37,15 @@
     color: var(--clr-secondary);
     font-size: 18px;
     font-weight: 600;
-    overflow: hidden;
-    text-overflow: ellipsis;
+
+    @include with-text-overflow;
   }
 
   & > p {
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-}
+    padding-bottom: 10px;
 
-.additional_info_container {
-  display: flex;
-  gap: 32px;
+    @include with-text-overflow;
+  }
 }
 
 .additional_info {
@@ -61,8 +58,7 @@
   font-weight: 400;
   color: var(--clr-secondary-300);
 
-  overflow: hidden;
-  text-overflow: ellipsis;
+  @include with-text-overflow;
 }
 
 .additional_info_item {
@@ -70,13 +66,11 @@
   gap: 20px;
 
   & > span {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    text-wrap: wrap;
+    @include with-text-overflow;
   }
 
   & > span:first-child {
-    width: 80px;
+    width: 100px;
 
     &::first-letter {
       text-transform: uppercase;
@@ -95,6 +89,8 @@
 }
 
 .price_and_delivery_container {
+  width: 177px;
+
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -104,25 +100,33 @@
   & > p {
     font-size: 18px;
     font-weight: 600;
+
+    @include with-text-overflow;
   }
 
-  & > span {
+  & > p:last-child {
     font-size: 12px;
     font-weight: 600;
     text-decoration: line-through;
     color: var(--clr-secondary-300);
+
+    @include with-text-overflow;
   }
 }
 
 .delivery_info {
+  width: 100%;
   color: var(--clr-secondary-300);
 
   & > p {
     font-size: 12px;
     font-weight: 600;
+
+    @include with-text-overflow;
   }
 
-  & > span {
+  & > p:last-child {
+    @include with-text-overflow;
     font-size: 12px;
     font-weight: 400;
   }
@@ -148,6 +152,10 @@
     padding: 10px;
     gap: 10px;
   }
+
+  .info {
+    width: calc(100vw - 526px);
+  }
 }
 
 @include tablet {
@@ -155,7 +163,12 @@
     flex-direction: column;
   }
 
+  .price_and_delivery_container {
+    width: calc(100vw - 292px);
+  }
+
   .info {
+    width: calc(100vw - 292px);
     gap: 10px;
   }
 }
@@ -163,5 +176,14 @@
 @include mobile {
   .container {
     flex-direction: column;
+  }
+
+  .price_and_delivery_container {
+    width: calc(100vw - 42px);
+  }
+
+  .info {
+    width: calc(100vw - 42px);
+    gap: 10px;
   }
 }
